@@ -22,7 +22,7 @@ if strcmp(x,'init')
     f.options.KnownMin = [1,1] ;
     f.options.PopulationSize = 100 ;
     f.options.ConstrBoundary = 'penalize' ;
-    f.options.UseParallel = 'always' ;
+    f.options.UseParallel = 'never' ;
 else
     x = reshape(x,1,[]) ;
     if size(x,2) >= 2
